--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pet Shop </title>
+	<link rel= "stylesheet" type="text/css" href= "styles.css" >
 </head>
 <body>
-	<h1> Taylor's Pet Store </h1>
-<div All Pets> </div>
-	<div Individual-pet>
+	<h1 id= "Taylor's Pet Store" </h1>
+<div id="all pets">
+	<div class="Individual-pet">
 		<h3> Rocky </h3>
+		<img src= "https://i.pinimg.com/736x/04/bc/d5/04bcd5b60b0c86d40be90bbb778ee3cd--scooby-doo-border-terrier-mix.jpg" alt= "a picture of rocky"/>
 		<p> a terrior mix who was born on July 6th and is now 3 months old. </p>
 	</div>
-	<div Individual-pet>
+<div class="Individual-pet">
 		<h3> Peanut </h3>
+		<img src="https://i.pinimg.com/736x/88/04/99/880499fd0fa34463118b6f856ed06e79--jack-russell-puppies-jack-russell-terriers.jpg" alt= ""
 		
 
 
